--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "illuminate/contracts": "11.x",
         "illuminate/database": "11.x",
         "illuminate/filesystem": "11.x",
-
+        "laravel/framework":"^12.0",
         "nikolag/core": "2.9.x",
         "square/square": "29.0.0.20230720"
     },
